--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>这是个标题</title>
+<title>这是zqy的网页</title>
 </head>
 <body>
-<h1>这是一个一个简单的HTML</h1>
+<h1>还没开始做，别着急</h1>
 <p>Hello World！</p>
 </body>
 </html>
